# Big_Data_Final_Exam

./: .gitignore  Makefile  README.md  pyproject.toml
conf/base/: config.yaml
credit_risk/: __init__.py
credit_risk/config/: __init__.py
credit_risk/data/ingestion/: multi_table.py
credit_risk/features/: kruskal_selection.py  pipeline.py  retraining_trigger.py
credit_risk/models/: __init__.py  explainer.py  registry.py  trainer.py
credit_risk/monitoring/: __init__.py  categorical_drift.py  drift.py
credit_risk/risk/: __init__.py  expected_loss.py  scorecard.py  segmentation.py  stress_testing.py
credit_risk/utils/: __init__.py  logging.py  spark.py
data/08_reporting/: categorical_drift_report.json  drift_report.json  feature_ranking_report.json  portfolio_risk_report.json  retraining_decision.json
docs/: system-design.md
infrastructure/: docker-compose.yml
notebooks/: 01_eda.ipynb  EDA_Home_Credit_Default_Risk.ipynb
pipelines/: ablation_pipeline.py  categorical_drift_pipeline.py  etl_pipeline.py  evaluation_pipeline.py  feature_selection_pipeline.py  hdfs_pipeline.py  monitoring_pipeline.py  risk_pipeline.py  training_pipeline.py  yarn_submit.sh
streaming/: kafka_consumer.py  kafka_producer.py  spark_streaming.py
tests/: conftest.py  test_drift.py
