[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "big-data-final-exam"
version = "1.0.0"
description = "Credit Risk Modeling with PySpark — Big Data Final Exam"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Nguyễn Việt Phương", email = "muahahaha55@users.noreply.github.com"}]
requires-python = ">=3.10,<3.13"

dependencies = [
    # Core Spark
    "pyspark==3.5.0",
    "pyarrow>=14.0",
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",

    # MLOps
    "mlflow>=2.9,<3.0",

    # Kafka
    "kafka-python>=2.0",

    # Config & utilities
    "pyyaml>=6.0",
    "structlog>=23.2",

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.12",
    "ruff>=0.1.9",
    "ipykernel>=6.28",
    "jupyterlab>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["credit_risk*", "pipelines*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = ["-ra", "--cov=credit_risk", "--cov-report=term-missing"]
markers = [
    "unit: fast unit tests (no Spark)",
    "integration: integration tests (requires Spark)",
]